feat: added basic css

--- a/static-website/index.html
+++ b/static-website/index.html
@@ -4,137 +4,171 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
+      content="width=device-width, initial-scale=1"
     />
     <title>Шрус Внешний (Граната)</title>
+    <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
-    <h1>Шрус Внешний (Граната)</h1>
+    <main>
+      <h1>Шрус Внешний (Граната)</h1>
 
-    <h2>Как добраться</h2>
+      <h2>Как добраться</h2>
 
-    <p>
-      Снимаем ??? (бита на 30) не забываем что там шайба за
-      ???
-    </p>
+      <p>
+        Снимаем ??? (бита на 30) не забываем что там шайба
+        за ???
+      </p>
 
-    <p>Снимаем колесо (биты на 17)</p>
+      <p>Снимаем колесо (биты на 17)</p>
 
-    <p>Зачистить можно металлической щёткой</p>
+      <p>Зачистить можно металлической щёткой</p>
 
-    <p>
-      Откручиваем болт (бита на 17, держать с двух сторон)
-    </p>
+      <p>
+        Откручиваем болт (бита на 17, держать с двух сторон)
+      </p>
 
-    <img
-      src="/assets/img/шрус-внешний-откручиваем-болт.PNG"
-      alt=""
-    />
+      <img
+        src="/assets/img/шрус-внешний-откручиваем-болт.PNG"
+        alt="шрус-внешний-откручиваем-болт"
+      />
 
-    <p>Разваливаем всю конструкцию на три элемента</p>
+      <p>Разваливаем всю конструкцию на три элемента</p>
 
-    <p>Снимаем скобу с жопы пыльника</p>
+      <p>Снимаем скобу с жопы пыльника</p>
 
-    <img src="/assets/img/скоба-жопа-пыльника.PNG" alt="" />
+      <img
+        src="/assets/img/скоба-жопа-пыльника.PNG"
+        alt="скоба-жопа-пыльника"
+      />
 
-    <p>
-      Стягиваем пыльник на вал, чтобы не мешался (обнажаем
-      гранату)
-    </p>
+      <p>
+        Стягиваем пыльник на вал, чтобы не мешался (обнажаем
+        гранату)
+      </p>
 
-    <p>Сбиваем молотком шрус</p>
+      <p>Сбиваем молотком шрус</p>
 
-    <img src="/assets/img/молоток-долбит-шрус.PNG" alt="" />
+      <img
+        src="/assets/img/молоток-долбит-шрус.PNG"
+        alt="молоток-долбит-шрус"
+      />
 
-    <img
-      src="/assets/img/молоток-долбит-шрус-1.PNG"
-      alt=""
-    />
+      <img
+        src="/assets/img/молоток-долбит-шрус-1.PNG"
+        alt="молоток-долбит-шрус-1"
+      />
 
-    <p>Если шрус не поддаётся, то мы его распиливаем</p>
+      <p>Если шрус не поддаётся, то мы его распиливаем</p>
 
-    <img src="/assets/img/пилим-старый-шрус.PNG" alt="" />
+      <img
+        src="/assets/img/пилим-старый-шрус.PNG"
+        alt="пилим-старый-шрус"
+      />
 
-    <p>Снимаем стопорное кольцо</p>
+      <p>Снимаем стопорное кольцо</p>
 
-    <img src="/assets/img/стопорное-кольцо.PNG" alt="" />
+      <img
+        src="/assets/img/стопорное-кольцо.PNG"
+        alt="стопорное-кольцо"
+      />
 
-    <p>Снимаем ??? (штуку для рубки внутри миксера)</p>
+      <p>Снимаем ??? (штуку для рубки внутри миксера)</p>
 
-    <p>Снимаем второе стопорное кольцо</p>
+      <p>Снимаем второе стопорное кольцо</p>
 
-    <img
-      src="/assets/img/второе-стопорное-кольцо.PNG"
-      alt=""
-    />
+      <img
+        src="/assets/img/второе-стопорное-кольцо.PNG"
+        alt="второе-стопорное-кольцо"
+      />
 
-    <h2>Как поставить новый</h2>
+      <h2>Как поставить новый</h2>
 
-    <p>
-      Закатываем на вал скоба, которая скрепит жопу пыльника
-    </p>
+      <p>
+        Закатываем на вал скоба, которая скрепит жопу
+        пыльника
+      </p>
 
-    <p>Натягиваем пыльник на вал</p>
+      <p>Натягиваем пыльник на вал</p>
 
-    <p>
-      Потом накатываем резиновую прокладку+стопорное кольцо
-      (???) вместе
-    </p>
+      <p>
+        Потом накатываем резиновую прокладку+стопорное
+        кольцо (???) вместе
+      </p>
 
-    <p>
-      Кольцо с выгибом ставим в сторону пластмассового
-      кольца
-    </p>
+      <p>
+        Кольцо с выгибом ставим в сторону пластмассового
+        кольца
+      </p>
 
-    <p>
-      Надеваем вперед железное кольцо, потом пластиковое
-    </p>
+      <p>
+        Надеваем вперед железное кольцо, потом пластиковое
+      </p>
 
-    <p>Немного смазки в подшипники</p>
+      <p>Немного смазки в подшипники</p>
 
-    <p>Остальную смазку выдавливаем в пыльник</p>
+      <p>Остальную смазку выдавливаем в пыльник</p>
 
-    <p>Ставим внешнее стопорное кольцо</p>
+      <p>Ставим внешнее стопорное кольцо</p>
 
-    <img
-      src="/assets/img/внешнее-стопорное-кольцо.PNG"
-      alt=""
-    />
+      <img
+        src="/assets/img/внешнее-стопорное-кольцо.PNG"
+        alt="внешнее-стопорное-кольцо"
+      />
 
-    <p>
-      Ставим гранату (приставляем)<br />
-      На её конец ??? (бита на 30)<br />
-      Забиваем молотком гранату на вал
-    </p>
+      <p>
+        Ставим гранату (приставляем)<br />
+        На её конец ??? (бита на 30)<br />
+        Забиваем молотком гранату на вал
+      </p>
 
-    <p>ИЛИ</p>
+      <p>ИЛИ</p>
 
-    <p>Забиваем гранату об пол</p>
+      <p>Забиваем гранату об пол</p>
 
-    <p>Натягиваем пыльник на гранату</p>
+      <p>Натягиваем пыльник на гранату</p>
 
-    <p>Ставим стяжку</p>
+      <p>Ставим стяжку</p>
 
-    <img src="/assets/img/ставим-новую-скобу.PNG" alt="" />
+      <img
+        src="/assets/img/ставим-новую-скобу.PNG"
+        alt="ставим-новую-скобу"
+      />
 
-    <p>
-      Хвостик хомута должен быть в сторону движения колеса
-    </p>
+      <p>
+        Хвостик хомута должен быть в сторону движения колеса
+      </p>
 
-    <p>Ставим стяжку на жопе шруса</p>
+      <p>Ставим стяжку на жопе шруса</p>
 
-    <p>Получаем итоговый результат</p>
+      <p>Получаем итоговый результат</p>
 
-    <img src="/assets/img/итоговый-результат.PNG" alt="" />
+      <img
+        src="/assets/img/итоговый-результат.PNG"
+        alt="итоговый-результат"
+      />
 
-    <h2>Советы</h2>
+      <h2>Советы</h2>
 
-    <p>
-      Если меняешь пыльник то надо снимать и промывать шрус.
-      Менять в нём смазку Разбирать не обязательно. Бензина
-      по больше и кисточкой вычистить (или керосин)
-    </p>
+      <p>
+        Если меняешь пыльник то надо снимать и промывать
+        шрус. Менять в нём смазку Разбирать не обязательно.
+        Бензина по больше и кисточкой вычистить (или
+        керосин)
+      </p>
 
-    <p>Можно приобрести специальный Съемник Шруса</p>
+      <p>
+        2023.11.17 купил за 2800 внешний шрус Meyle 100 498
+        0011 ШРУС наружный к-кт: ШРУС наружный к-кт, ШРУС
+        наружный (компл.) VW Golf II/III/Passat B3/Vento
+        1.4/1.6L /под гайку MEYLE 100 498 0011
+      </p>
+
+      <p>На правое переднее колесо</p>
+
+      <p>Можно приобрести специальный Съемник Шруса</p>
+    </main>
+
+    <footer>v 0.1.3</footer>
   </body>
 </html>
